--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -41,7 +41,7 @@ $imagen-fondo-avance-2:url('../assets/img/fondo_analisis_2.jpg');
 $imagen-espacio:cover;
 $imagen-agregado:fixed;
 
-$color-estandar-1:aqua;
+$color-estandar-1:rgb(0, 255, 255);
 $color-estandar-2:rgba(0, 0, 0, 0.473);
 $color-estandar-3:rgba(0, 0, 0, 0.603);
 $color-estandar-4:linear-gradient(to right, rgb(23, 29, 35), rgba(30, 39, 47, 0.479));
@@ -50,6 +50,7 @@ $color-estandar-6:rgba(0, 0, 0, 0.525);
 $color-estandar-7:rgb(255, 255, 255);
 $color-estandar-8:rgb(22, 78, 139);
 $color-estandar-9:rgb(58, 113, 172);
+$color-estandar-10:0 0 10px rgb(0, 255, 255);
 
 $porcentaje-estandar-50:50%;
 $porcentaje-estandar-60:60%;
