--- a/sass/_utilitarias.scss
+++ b/sass/_utilitarias.scss
@@ -31,7 +31,7 @@
 }
 
 .borde{
-    border-top: $borde-estandar-2;
+    border-bottom: $borde-estandar-2;
 }
 
 @media screen and (min-width:0px) and (max-width: 768px){
