--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -36,7 +36,9 @@ $imagen-fondo-dredge-2:url('../assets/img/dredge_movil.jpg');
 $imagen-fondo-star-1:url('../assets/img/star_war_survivor.jpg');
 $imagen-fondo-star-2:url('../assets/img/star_war_survivor_movil.jpg');
 $imagen-fondo-avance-1:url('../assets/img/fondo_analisis_1.jpg');
+$imagen-fondo-avance-1-mini:url('../assets/img/fondo_analisis_1_mini.jpg');
 $imagen-fondo-avance-2:url('../assets/img/fondo_analisis_2.jpg');
+$imagen-fondo-avance-2-mini:url('../assets/img/fondo_analisis_2_mini.jpg');
 
 $imagen-espacio:cover;
 $imagen-agregado:fixed;
