--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -34,6 +34,7 @@ main{
             .imgInicio{
                 width: map-get($map: $medidas-estandar, $key: 200);
                 height: map-get($map: $medidas-estandar, $key: 320);
+                object-fit: $imagen-espacio;
             }
         }
     }
