--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -88,6 +88,7 @@ $medida-estandar-25:25px;
 $medida-estandar-30:30px;
 $medida-estandar-40:40px;
 $medida-estandar-50:50px;
+$medida-estandar-100:100px;
 $medida-estandar-110:110px;
 $medida-estandar-200:200px;
 $medida-estandar-300:300px;
@@ -108,6 +109,7 @@ $medidas-estandar:(
     30:$medida-estandar-30,
     40:$medida-estandar-40,
     50:$medida-estandar-50,
+    100:$medida-estandar-100,
     110:$medida-estandar-110,
     200:$medida-estandar-200,
     300:$medida-estandar-300,
